scss/_custom.scss
/**
*
* Custom styling.
*
*/


// Font overrides.

$font-regular:    "permianseriftypefaceregular";
$font-bold:       "permianseriftypefacebold";

body {
  background-color: rgba(0, 0, 0, .9);
  font: 1em/1.5 $font-regular, "Helvetica Neue", Helvetica, Arial, serif;
}

.dragslider h2,
.dragslider h2 span,
.pages .content p {

  font-family: $font-regular;
}

.logo {
  width: 125px;
  fill: $primary-color;

  @include breakpoint($breakpoint-tablet) {
  width: 300px;
  }

}

button.content-switch {
  border-radius: 100%;
  height: 60px;
  width: 60px;

  opacity: 1;
  text-indent: 700em;

  transition: all .25s;

  @include breakpoint($breakpoint-tablet) {
    height: 75px;
    width: 75px;
  }


}

button.content-switch:hover {
  border-color: $link-color;
  color: $link-color;
}

button.content-switch::before {
  font-size: 2.3em;
  line-height: .35em;

  @include breakpoint($breakpoint-tablet) {
    font-size: 3rem; // Using rem because of font size getting to large in IE 10
    width: 75px;
  }

}

.dragslider h2 {
  z-index: 99;
}

.dragslider h2 span {
  padding-top: 1em;
}


.img-wrap img {
  opacity: 1;
}

.img-wrap::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 98;

  content: "";

  background-color: rgba(60, 60, 60, .6);
}

.img-dragger-small .slide h2 {
  color: rgb(193, 193, 193);
}


button.header-switch {

  position: absolute;
  top: 50%;
  width: 30px;
  height: 30px;
  z-index: 999;

  border: 0;
  color: #fff;
  background: transparent;
  line-height: 0;
  border-radius: 100%;
  -webkit-font-smoothing: antialiased;
  overflow: hidden;
  font-size: 0.6em;
  text-indent: 50em;

  @include breakpoint($breakpoint-tablet) {
    font-size: 0.85em;
    width: 40px;
    height: 40px;
  }

  &.left-button {
    left: .5em;
    -ms-transform: rotate(90deg); /* IE 9 */
    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
    transform: rotate(90deg);

    @include breakpoint($breakpoint-tablet) {
      left: 2em;
    }
  }
  &.right-button {
    right: .5em;
    -ms-transform: rotate(-90deg); /* IE 9 */
    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
    transform: rotate(-90deg);

    @include breakpoint($breakpoint-tablet) {
      right: 2em;
    }
  }
}

button.header-switch::before {

  content: "\e097";
  font-family: "feathericons";
  speak: none;
  position: absolute;
  width: 100%;
  height: 100%;
  font-size: 3em;
  font-weight: 400;
  left: 0;
  text-indent: 0;
  -webkit-font-smoothing: antialiased;
}

button.header-switch:hover {
  border-color: $link-color;
  color: $link-color;
}

// Hide left and right links when using menu

.switch-min {
  .header-switch {
    display: none;
  }
}

// Move button after scroll and add background color

.show-content .current button.content-switch {
  margin-top: -4em;

  border-color: $white;
  color: $white;

  &:hover {
    border-color: $link-color;
    color: $link-color;
  }
}

.show-content .content-switch-background {
  position: absolute;
  top: 100%;
  right: 0;
  left: 0;
  height: 5.2em;
  background-color: rgba(0, 0, 0, .9);

  @include breakpoint($breakpoint-tablet) {
    height: 7.5em;
  }
}

.pages .content.show h2 {
  color: #000;
  padding-top: 2em;

  @include breakpoint($breakpoint-tablet) {
    padding-top: 2.25em;
    font-size: 5em;

  }


  span {

  }
}

